--- a/templates/blog/detail.html
+++ b/templates/blog/detail.html
@@ -10,7 +10,7 @@
                                                 datetime="{{ blog.created_time }}">{{ blog.created_time }}</time></a></span>
       <span class="post-author"><a href="#">{{ blog.author }}</a></span>
       <span class="comments-link"><a href="#">{{ blog.comment_set.count }} 评论</a></span>
-      <span class="views-count"><a href="#">588 阅读</a></span>
+      <span class="views-count"><a href="#">{{ blog.view_times }} 阅读</a></span>
     </div>
   </header>
   <div class="entry-content clearfix">
