--- a/templates/base.html
+++ b/templates/base.html
@@ -22,15 +22,12 @@
        <script src="{% static 'blog/js/modernizr.custom.js' %}"></script>
   </head>
   <body>
-       <script src="{% static 'blog/js/script.js' %}"></script>
-  </body>
-  <body>
 <div class="container">
     <header id="site-header">
         <div class="row">
             <div class="col-md-4 col-sm-5 col-xs-8">
                 <div class="logo">
-                    <h1><a href="{% url 'django_web:index' %}"><b>首页</b></a></h1>
+                    <h1><a href="{% url 'blog:index' %}"><b>首页</b></a></h1>
                 </div>
             </div><!-- col-md-4 -->
             <div class="col-md-8 col-sm-7 col-xs-4">
@@ -43,7 +40,7 @@
 
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav navbar-right">
-                            <li class="cl-effect-11"><a href="{% url 'django_web:index' %}" data-hover="首页">首页</a></li>
+                            <li class="cl-effect-11"><a href="{% url 'blog:index' %}" data-hover="首页">首页</a></li>
                             <li class="cl-effect-11"><a href="full-width.html" data-hover="博客">博客</a></li>
                             <li class="cl-effect-11"><a href="about.html" data-hover="关于">关于</a></li>
                             <li class="cl-effect-11"><a href="contact.html" data-hover="联系">联系</a></li>
@@ -53,8 +50,8 @@
                 <div id="header-search-box">
                     <a id="search-menu" href="#"><span id="search-icon" class="ion-ios-search-strong"></span></a>
                     <div id="search-form" class="search-form">
-                        <form role="search" method="get" id="searchform" action="#">
-                            <input type="search" placeholder="搜索" required>
+                        <form role="search" method="get" id="searchform" action="{% url 'blog:search' %}">
+                            <input type="search" name="search_str" placeholder="搜索" required>
                             <button type="submit"><span class="ion-ios-search-strong"></span></button>
                         </form>
                     </div>
@@ -94,7 +91,7 @@
                     {% archives as date_list %}
                     <ul>
                         {% for date in date_list %}
-                            <li><a href="{% url 'django_web:blogs_by_archives' date.year date.month %}">{{ date.year }} 年 {{ date.month }} 月</a></li>
+                            <li><a href="{% url 'blog:blogs_by_archives' date.year date.month %}">{{ date.year }} 年 {{ date.month }} 月</a></li>
                         {% empty %}
                             暂无归档！
                         {% endfor %}
@@ -103,49 +100,25 @@
 
                 <div class="widget widget-category">
                     <h3 class="widget-title">分类</h3>
-                    {% get_categories as category_list %}
-                    <ul>
-                        {% for category in category_list %}
-                            <li> <a href="{% url 'django_web:blogs_by_category' category.id %}">{{ category.name }} <span class="post-count">(13)</span></a></li>
-                        {% empty %}
-                            暂无分类！
-                        {% endfor %}
-                    </ul>
+                        {% get_categories as category_list %}
+                        <ul>
+                            {% for category in category_list %}
+                                <li> <a href="{% url 'blog:blogs_by_category' category.id %}">{{ category.name }} <span class="post-count">({{ category.num_blogs }})</span></a></li>
+                            {% empty %}
+                                暂无分类！
+                            {% endfor %}
+                        </ul>
                 </div>
 
                 <div class="widget widget-tag-cloud">
                     <h3 class="widget-title">标签云</h3>
+                    {%  get_tags as tag_list %}
                     <ul>
+                        {% for tag in tag_list %}
                         <li>
-                            <a href="#">Django</a>
+                            <a href="{% url 'blog:blogs_by_tag' tag.id %}">{{ tag.name }}</a>
                         </li>
-                        <li>
-                            <a href="#">Python</a>
-                        </li>
-                        <li>
-                            <a href="#">Java</a>
-                        </li>
-                        <li>
-                            <a href="#">笔记</a>
-                        </li>
-                        <li>
-                            <a href="#">文档</a>
-                        </li>
-                        <li>
-                            <a href="#">AngularJS</a>
-                        </li>
-                        <li>
-                            <a href="#">CSS</a>
-                        </li>
-                        <li>
-                            <a href="#">JavaScript</a>
-                        </li>
-                        <li>
-                            <a href="#">Snippet</a>
-                        </li>
-                        <li>
-                            <a href="#">jQuery</a>
-                        </li>
+                        {% endfor %}
                     </ul>
                 </div>
                 <div class="rss">
@@ -181,7 +154,7 @@
     </nav>
 </div>
 
-
+<script src="{% static 'blog/js/script.js' %}"></script>
 </body>
 </html>
 
